--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.ast.astcul.ResultActivity" />
+        <activity android:name="com.ast.astcul.CakeActivity" />
     </application>
 
 </manifest>
